FreeBSD: switch qcow2 cloud image from ZFS to UFS
Ensures qcow2 image stays sparse and compact while allowing filesystem expansion

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/cijoe/configs/qemuhost-with-guest-freebsd_14.toml
+++ b/cijoe/configs/qemuhost-with-guest-freebsd_14.toml
@@ -49,9 +49,9 @@ bin = "qemu-system-x86_64"
 system_label = "x86_64"
 # cloud.decompressed_path = "{{ local.env.HOME }}/system_imaging/cloud/FreeBSD-14.2-RELEASE-amd64-BASIC-CLOUDINIT.zfs.qcow2"
 # cloud.url ="https://download.freebsd.org/releases/VM-IMAGES/14.2-RELEASE/amd64/Latest/FreeBSD-14.2-RELEASE-amd64-BASIC-CLOUDINIT.zfs.qcow2.xz"
-cloud.url = "https://object-storage.public.mtl1.vexxhost.net/swift/v1/1dbafeefbd4f4c80864414a441e72dd2/bsd-cloud-image.org/images/freebsd/14.2/2024-12-08/zfs/freebsd-14.2-zfs-2024-12-08.qcow2"
+cloud.url = "https://object-storage.public.mtl1.vexxhost.net/swift/v1/1dbafeefbd4f4c80864414a441e72dd2/bsd-cloud-image.org/images/freebsd/14.2/2024-12-08/ufs/freebsd-14.2-ufs-2024-12-08.qcow2"
 # cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/FreeBSD-14.2-RELEASE-amd64-BASIC-CLOUDINIT.zfs.qcow2.xz"
-cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/freebsd-14.2-zfs-2024-12-08.qcow2"
+cloud.path = "{{ local.env.HOME }}/system_imaging/cloud/freebsd-14.2-ufs-2024-12-08.qcow2"
 cloud.metadata_path = "{{ resources.auxiliary['system_imaging.cloudinit-freebsd-metadata'] }}"
 cloud.userdata_path = "{{ resources.auxiliary['system_imaging.cloudinit-freebsd-userdata'] }}"
 # disk.path = "{{ local.env.HOME }}/system_imaging/disk/freebsd_14_x86_64.qcow2"
