--- a/cijoe/workflows/build_freebsd_14_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_freebsd_14_qcow2_using_qemu.yaml
@@ -59,7 +59,10 @@ steps:
     pkg install -y git
 
 - name: kernel_src
-  uses: core.repository_prep
+  run: |
+    mkdir -p "{{ local.env.HOME }}/git/freebsd"
+    curl -L https://github.com/freebsd/freebsd-src/archive/refs/tags/release/14.2.0-p3.tar.gz | tar -xz -C "{{ local.env.HOME }}/git/freebsd" --strip-components=1
+    ls -l "{{ local.env.HOME }}/git/freebsd"
 
 - name: tgz_transfer
   uses: core.put
@@ -76,9 +79,12 @@ steps:
 - name: guest_autotest_setup
   run: |
     /tmp/spdk/scripts/pkgdep.sh -a
+    rm -r /var/cache/pkg/*
     mkdir /tmp/git_repos
     CC=gcc13 SYSDIR="{{ local.env.HOME }}/git/freebsd/sys" /tmp/spdk/test/common/config/autotest_setup.sh --install-deps --upgrade --dir-git="/tmp/git_repos" --test-conf="lcov,flamegraph,fio,nvmecli,bpftrace,qemu,contigmem"
     rm -r /tmp/git_repos
+    rm -r /tmp/spdk
+    rm -r /var/cache/pkg/*
 
 - name: guest_shutdown
   run: |
