freebsd: download kernel snapshot instead of git
Fixes: spdk/spdk#3742

improves speed and reduces size
size reduction is due to huge .git folder, see:

```
root@spdk:~# git clone https://github.com/freebsd/freebsd.git --branch "release/14.2.0-p3" --depth 1 freebsd_shallow
root@spdk:~# du -sh freebsd_shallow/
1.9G    freebsd_shallow/
```
vs
```
root@spdk:~# git clone https://github.com/freebsd/freebsd.git --branch "release/14.2.0-p3"
root@spdk:~# du -sh freebsd
4.8G    freebsd
root@spdk:~# du -sh freebsd/.git
3.3G    freebsd/.git
```
vs
```
root@spdk:~# wget https://github.com/freebsd/freebsd-src/archive/refs/tags/release/14.2.0-p3.tar.gz
root@spdk:~# du -sh freebsd-src-release-14.2.0-p3/
1.6G    freebsd-src-release-14.2.0-p3/
```

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/cijoe/workflows/build_freebsd_14_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_freebsd_14_qcow2_using_qemu.yaml
@@ -61,7 +61,10 @@ steps:
     pkg install -y git
 
 - name: kernel_src
-  uses: core.repository_prep
+  run: |
+    # TODO: consider revert back to using `core.repository_prep` once `shallow` and `single-branch` options are added to cijoe
+    mkdir -p "{{ local.env.HOME }}/git/freebsd"
+    curl -L https://github.com/freebsd/freebsd-src/archive/refs/tags/release/14.2.0-p3.tar.gz | tar -xz -C "{{ local.env.HOME }}/git/freebsd" --strip-components=1
 
 - name: tgz_transfer
   uses: core.put
