ci: add new test for short-fuzz-phy-autotest
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -165,6 +165,7 @@ jobs:
         - build-files-container-autotest
         - scan-build-container-autotest
         - check-so-deps-container-autotest
+        - short-fuzz-phy-autotest
         include:
         - nvme_setup: "zns"
         - distro: "fedora_40"
