false-positives: remove extra `env_vars` job to save runner
Removed workaround for https://github.com/actions/runner/issues/2372
As there are no nested reusable workflows here and simple 1 step setup

`client_payload` moved to be job level env instead of yaml based
other envs moved to be step based envs

`env_vars` no longer needed and single job is enough
to call the shell/python script to check for false positives
and re-trigger the ci if needed.

for better review - conside instead of looking at diif,
look at final version of the file or/and apply skip whitespaces

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/gerrit-false-positives-handler.yml
+++ b/.github/workflows/gerrit-false-positives-handler.yml
@@ -27,32 +27,24 @@ on:
     types:
     - comment-added
 
-env:
-  client_payload: ${{ github.event.client_payload != '' && toJson(github.event.client_payload) || inputs.client_payload }}
-
 jobs:
-  env_vars: # Workaround for https://github.com/actions/runner/issues/2372
-    runs-on: ubuntu-latest
-    outputs:
-      client_payload: ${{ env.client_payload }}
-    steps:
-    - run: echo "Passing workflow env vars to reusable workflows"
-
   parse_comment:
-    needs: env_vars
     runs-on: ubuntu-latest
+    if: github.event.client_payload || inputs.client_payload != ''
     env:
-      GH_TOKEN: ${{ github.token }}
-      change_num: ${{ fromJSON(needs.env_vars.outputs.client_payload).change.number }}
-      patch_set: ${{ fromJSON(needs.env_vars.outputs.client_payload).patchSet.number }}
-      COMMENT: ${{ fromJSON(needs.env_vars.outputs.client_payload).comment }}
-      AUTHOR: ${{ fromJSON(needs.env_vars.outputs.client_payload).author.username }}
-      REPO: ${{ github.repository_owner }}/spdk
-      GH_REPO: ${{ github.repository }}
-      GERRIT_BOT_USER: ${{ secrets.GERRIT_BOT_USER }}
-      GERRIT_BOT_HTTP_PASSWD: ${{ secrets.GERRIT_BOT_HTTP_PASSWD }}
-      GH_ISSUES_PAT: ${{ secrets.GH_ISSUES_PAT }}
+      client_payload: ${{ github.event.client_payload && toJson(github.event.client_payload) || inputs.client_payload }}
     steps:
     - uses: actions/checkout@v4
     - name: Parse for false positive
       run: .github/scripts/parse_false_positive_comment.sh
+      env:
+        GH_TOKEN: ${{ github.token }}
+        change_num: ${{ fromJSON(env.client_payload).change.number }}
+        patch_set: ${{ fromJSON(env.client_payload).patchSet.number }}
+        COMMENT: ${{ fromJSON(env.client_payload).comment }}
+        AUTHOR: ${{ fromJSON(env.client_payload).author.username }}
+        REPO: ${{ github.repository_owner }}/spdk
+        GH_REPO: ${{ github.repository }}
+        GERRIT_BOT_USER: ${{ secrets.GERRIT_BOT_USER }}
+        GERRIT_BOT_HTTP_PASSWD: ${{ secrets.GERRIT_BOT_HTTP_PASSWD }}
+        GH_ISSUES_PAT: ${{ secrets.GH_ISSUES_PAT }}
