--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -33,6 +33,11 @@ on:
         type: boolean
         default: false
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}-${{ inputs.client_payload != '' && fromJson(inputs.client_payload).change.number
+    || inputs.gerrit_ref }}
+  cancel-in-progress: true
+
 env:
   spdk_path: './spdk'
 jobs:
