common-tests: run pkgdep.sh via autotest_setup.sh
Use "autotest_setup.sh --install-deps". This runs
installation for both build packages (pkgdep.sh) and
test packages (autotest_setup.sh).

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -126,7 +126,7 @@ jobs:
         set -x
         tar xzf spdk.tar.gz --strip 1
         # TODO: consider 'autorun.sh' or 'autobuild.sh' or 'autotest.sh'
-        ${{ matrix.distro == '' && 'sudo' || '' }} ./scripts/pkgdep.sh --all
+        ./test/common/config/autotest_setup.sh --install-deps
         ./configure --enable-coverage \
             --without-uring \
             --without-fio \
