common-tests: rename distros-container to pkgdep
The other job in this file is called "autorun" because
of executing "autorun.sh", so using "pkgdep" for job
testing packages installation seems to fit.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -81,7 +81,7 @@ jobs:
     outputs:
       artifact_id: ${{ steps.get_artifact_id.outputs.artifact_id }}
 
-  distros-container:
+  pkgdep:
     if: contains(inputs.changed_files, 'pkgdep')
     needs:
     - checkout_spdk
