common-tests: extend pkgdep job conditionals
Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -82,7 +82,7 @@ jobs:
       artifact_id: ${{ steps.get_artifact_id.outputs.artifact_id }}
 
   pkgdep:
-    if: contains(inputs.changed_files, 'pkgdep')
+    if: ${{ contains(inputs.changed_files, 'pkgdep') || contains(inputs.changed_files, 'autotest_setup.sh') }}
     needs:
     - checkout_spdk
     strategy:
