Skip HPE RDMA workflow if not on spdk/spdk-ci
Skip RDMA tests on forked repositories. Sometimes
using "gh act" to test changes is just not enough,
and testing by pushing to fork is a useful thing to
do.

Skipping HPE RDMA tests makes thing convenient because
workflows don't get stuck in "waiting for runner" and
there's no need to constantly comment out parts of
the workflow.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -76,7 +76,7 @@ jobs:
 
   hpe:
     name: NVMe-oF RDMA tests
-    if: ${{ !cancelled() }}
+    if: ${{ !cancelled() && github.repository == 'spdk/spdk-ci' }}
     needs:
     - patch_set_status
     uses: ./.github/workflows/nvmf-rdma.yml
@@ -96,5 +96,7 @@ jobs:
     uses: ./.github/workflows/summary.yml
     with:
       client_payload: ${{ needs.patch_set_status.outputs.client_payload }}
-      result: ${{ (needs.common.result == 'success' && needs.hpe.result == 'success') && 'success' || 'failure' }}
+      result: >-
+        ${{ (needs.common.result == 'success' && (needs.hpe.result == 'success' || needs.hpe.result == 'skipped')) &&
+        'success' || 'failure' }}
     secrets: inherit
