ci: Add Red Hat UBI images to container testing workflow
Added Red Hat Universal Base Images (UBIs) for versions 8, 9, and 10 to the workflow. Since all of them are still supproted

Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -104,6 +104,9 @@ jobs:
         container:
         - quay.io/centos/centos:9
         - quay.io/centos/centos:10
+        # - registry.access.redhat.com/ubi8/ubi
+        - registry.access.redhat.com/ubi9/ubi
+        - registry.access.redhat.com/ubi10/ubi
         - docker.io/rockylinux/rockylinux:9
         - docker.io/rockylinux/rockylinux:10
         - docker.io/library/ubuntu:20.04
