Skip cijoe cleanup phase if cijoe dir not found
Cleanup task for cijoe will run always, regardless of
failures in previous tasks, but will also check for
ci/cijoe directory presence before running.

This is done to skip the task in case something went
wrong with checking out the repository in previous
steps and generating task failure which confuse users.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -242,7 +242,7 @@ jobs:
         --monitor
 
     - name: qemu-guest, cleanup
-      if: always()
+      if: always() && hashFiles('ci/cijoe')
       run: |
         cd ci/cijoe
         cijoe workflows/autorun_in_qemu.yaml output_listing retrieve_autorun_output \
