Run vfio-user tests via autorun.sh
Stop with the manual "configure & make & run tests"
nonsense and use one and only, bleessed autorun.sh(TM).

DRIVER_OVERRIDE option for spdk/scripts/setup.sh is used
to avoid failures due to missing userspace drivers like
uio_pci_generic or vfio-pci.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/cijoe/workflows/autorun_in_container.yaml
+++ b/cijoe/workflows/autorun_in_container.yaml
@@ -65,9 +65,13 @@ steps:
   run: |
     rootdir=/opt/spdk && cd $rootdir && source ./test/common/autobuild_common.sh /opt/configs/check-so-deps-container-autotest.conf && ocf_precompile && SPDK_ABI_DIR=/opt/spdk-abi check_so_deps
 
+# TODO: Figure out sudo hack.
+# Sudo doesn't work spdk/spdk-ci:fedora_40 container image, resulting in PAM errors.
+# For now work around the issue by "masking" sudo and any options (e.g. -E) passed to it.
 - name: vfio-user-container-autotest
   run: |
-    rootdir=/opt/spdk && cd $rootdir && ./configure --enable-debug --enable-werror --with-rdma --with-idxd --with-fio=/usr/src/fio --with-iscsi-initiator --disable-unit-tests --enable-coverage --with-ublk --with-vfio-user && make -j && VHOST_DIR="{{ local.env.GITHUB_WORKSPACE }}/vhost_test" VM_IMAGE="{{ local.env.GITHUB_WORKSPACE }}/fedora_40_x86_64.qcow2" $rootdir/test/vfio_user/vfio_user.sh
+    echo "export VM_IMAGE={{ local.env.GITHUB_WORKSPACE }}/fedora_40_x86_64.qcow2" >> /opt/configs/vfio-user-container-autotest.conf
+    sudo() { "${@:2}" ; } &&  export -f sudo && /opt/spdk/autorun.sh /opt/configs/vfio-user-container-autotest.conf
 
 - name: output_listing
   run: |
