Rename ci autorun_in_qemu.yaml workflow to autorun.yaml
Both VM and container-based jobs from autorun matrix
use the same workflow file. "autorun" is no longer
in Qemu in some of the cases, so update the workflow
name to reflect that.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -277,7 +277,7 @@ jobs:
       if: ${{ contains(matrix.workflow.name, 'vm') }}
       run: |
         cd ci/cijoe
-        cijoe workflows/autorun_in_qemu.yaml guest_initialize guest_start guest_check \
+        cijoe workflows/autorun.yaml guest_initialize guest_start guest_check \
         --config configs/${{ matrix.workflow.cijoe_config_prefix }}-${{matrix.workflow.distro}}.toml \
         --output report_${{ matrix.workflow.name }}_prep_guest \
         --monitor
@@ -285,7 +285,7 @@ jobs:
     - name: qemu-guest, provision
       run: |
         cd ci/cijoe
-        cijoe workflows/autorun_in_qemu.yaml guest_check tgz_transfer abi_transfer ci_configs_transfer tgz_unpack output_create \
+        cijoe workflows/autorun.yaml guest_check tgz_transfer abi_transfer ci_configs_transfer tgz_unpack output_create \
         --config configs/${{ matrix.workflow.cijoe_config_prefix }}-${{matrix.workflow.distro}}.toml \
         --output report_${{ matrix.workflow.name }}_provision \
         --monitor
@@ -293,7 +293,7 @@ jobs:
     - name: qemu-guest, ${{ matrix.workflow.name }}
       run: |
         cd ci/cijoe
-        cijoe workflows/autorun_in_qemu.yaml ${{ matrix.workflow.name }} \
+        cijoe workflows/autorun.yaml ${{ matrix.workflow.name }} \
         --config configs/${{ matrix.workflow.cijoe_config_prefix }}-${{matrix.workflow.distro}}.toml \
         --output report_${{ matrix.workflow.name }} \
         --monitor
@@ -302,7 +302,7 @@ jobs:
       if: always()
       run: |
         cd ci/cijoe
-        cijoe workflows/autorun_in_qemu.yaml output_listing retrieve_autorun_output \
+        cijoe workflows/autorun.yaml output_listing retrieve_autorun_output \
         --config configs/${{ matrix.workflow.cijoe_config_prefix }}-${{matrix.workflow.distro}}.toml \
         --output report_${{ matrix.workflow.name }}_cleanup \
         --monitor
@@ -311,7 +311,7 @@ jobs:
       if: ${{ contains(matrix.workflow.name, 'vm') && contains(runner.labels, 'self-hosted') || env.ACT == 'true' }}
       run: |
         cd ci/cijoe
-        cijoe workflows/autorun_in_qemu.yaml guest_shutdown \
+        cijoe workflows/autorun.yaml guest_shutdown \
         --config configs/${{ matrix.workflow.cijoe_config_prefix }}-${{matrix.workflow.distro}}.toml \
         --output report_${{ matrix.workflow.name }}_guest_shutdown \
         --monitor
